<resources>
    <string name="app_name">Strath Lingo App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register For An Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_message">Register For An Account\nPlease Enter Your Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="back">back</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Login Failed\nPlease Try Again</string>
    <string name="missing_details">Please Fill In All Fields</string>
    <string name="password_mismatch">Passwords Must Match</string>
    <string name="UserAlreadyExists">An Account For This Email\nIs Already Registered</string>
    <string name="new_user_created">New User Created</string>
    <string name="forgotpw_enter_email">Please enter your email address\nto recover your password.</string>
    <string name="forgotpw_missing_email">Please enter your email.</string>
    <string name="forgotpw_incorrect_format">Please insert a valid email address.</string>
    <string name="forgotpw_email_not_found">Email not found!</string>
    <string name="forgotpw_link_sent">A link to recover your password\nhas been emailed to you.</string>
    <string name="forgotpw_back_to_login">Back to Login Screen</string>
    <string name="app_title_desc">Strath Lingo App Title</string>
    <string name="app_uni_logo_desc">University of Strathclyde Logo</string>
    <string name="your_languages">Your Languages</string>
    <string name="top_menu">MENU</string>
    <string name="add_language">Add A Language</string>
    <string name="bt_continue">Continue</string>
    <string name="top_back">BACK</string>
    <string name="top_home">HOME</string>
    <string name="select_lessons">Select A Lesson</string>
    <string name="bt_start">Start</string>
    <string name="what_word">What Is The Correct Word?</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="bt_add_language">Add Language</string>
    <string name="select_language">Select A Language To Learn</string>
    <string name="back_to_lessons">Back To Lessons</string>
    <string name="tv_lesson_complete">LESSON COMPLETE!</string>
    <string name="tv_my_profile">My Profile</string>
    <string name="tv_dictionary">Dictionary</string>
    <string name="tv_set_exp">Set Experience Level</string>
    <string name="tv_feedback">Provide Feedback</string>
    <string name="tv_logout">Logout</string>
    <string name="set_experience">Please set your experience level:</string>
    <string name="Beginner">Beginner</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Fluent">Fluent</string>
    <string name="bt_add_lesson">Add New Lesson</string>
    <string name="bt_edit_lesson">Edit Existing Lesson</string>
    <string name="available_languages">Current Available Languages</string>
    <string name="add_new_language">Add New Language</string>
    <string name="add_language_name">Enter A Language Name</string>
    <string name="language_exists">Language Already Exists</string>
    <string name="tv_add_lesson_file">Add Lesson Zip File</string>
    <string name="bt_upload">/..</string>
    <string name="bt_cancel">CANCEL</string>
    <string name="tv_language">"Language: "</string>
    <string name="tv_new_lesson_file">New Lesson Zip File</string>
    <string name="bt_delete">DELETE</string>
    <string name="dic_title">DICTIONARY</string>
    <string name="dic_choose_lang">Choose a language:</string>
    <string name="dic_search_hint">Enter a word...</string>
    <string name="dic_choose_target_lang">Translate into:</string>
    <string name="dic_search_error">Please enter a word to search.</string>
    <string-array name="languages">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="dic_search_button">SEARCH</string>
    <string name="lesson_progress">Progress</string>
    <string name="top_logout">LOGOUT</string>
    <string name="feed_back">Please Rate The App And Provide Feedback</string>
    <string name="feedback">Feedback (Optional)</string>
</resources>