<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_screens.Menu">

    <fragment
        android:id="@+id/f_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.cs991_group_project.user_screens.TopBarMenu"/>

    <TextView
        android:id="@+id/tv_my_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/f_top_bar"
        android:layout_margin="20dp"
        android:onClick="onClickMyProfile"
        android:textSize="20sp"
        android:text="@string/tv_my_profile"/>

    <TextView
        android:id="@+id/tv_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_my_profile"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/tv_dictionary"/>

    <TextView
        android:id="@+id/tv_set_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dictionary"
        android:layout_margin="20dp"
        android:onClick="onClickSetExp"
        android:textSize="20sp"
        android:text="@string/tv_set_exp"/>

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_set_exp"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/tv_feedback"
        android:onClick="onClickProvideFeedback"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_feedback"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/tv_logout"
        android:onClick="onClickLogout"/>

    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_uni" />

</RelativeLayout>