<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_screens.AdminCreateLesson">

    <fragment
        android:id="@+id/f_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.cs991_group_project.admin_screens.AdminTopBar"/>

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/f_top_bar"
        android:layout_margin="20dp"
        android:text="@string/tv_language"/>

    <TextView
        android:id="@+id/tv_upload_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_language"
        android:layout_margin="20dp"
        android:text="@string/tv_add_lesson_file"/>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_language"
        android:layout_toRightOf="@id/tv_upload_lesson"
        android:layout_margin="10dp"
        android:text="@string/bt_upload"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/logo_bottom"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onClickCancel"
            android:text="@string/bt_cancel" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onClickSubmit"
            android:text="@string/submit"
            android:enabled="false"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_uni" />

</RelativeLayout>