<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screens.RegisterUser">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_lingo" />

    <TextView
        android:id="@+id/tv_register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_top"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/register_message" />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_borderbox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_name"
        android:padding="10dp"
        android:inputType="text"
        android:layout_below="@id/tv_register_message"
        android:drawableLeft="@drawable/ic_login_email"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_borderbox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/et_register_name"
        android:drawableLeft="@drawable/ic_login_email"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_borderbox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_below="@id/et_register_email"
        android:drawableLeft="@drawable/ic_login_password"
        android:drawablePadding="5dp" />

    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_borderbox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:imeOptions="actionDone"
        android:layout_below="@id/et_register_password"
        android:drawableLeft="@drawable/ic_login_password"
        android:drawablePadding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_confirm_password"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onClickBack"
            android:text="@string/back" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onClickSubmit"
            android:text="@string/submit" />

    </LinearLayout>


    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo_strath_uni"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>