<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screens.ForgotPasswordLinkSent">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_lingo"
        android:contentDescription="@string/app_title_desc" />


    <TextView
        android:id="@+id/forgotpw_linksent_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_top"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgotpw_link_sent"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpw_linksent_msg"
        android:layout_marginTop="49dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="onClickHome"
            android:text="@string/forgotpw_back_to_login" />



    </LinearLayout>

    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo_strath_uni"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_uni_logo_desc" />


</RelativeLayout>