<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_screens.Quiz">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_lingo"/>

    <TextView
        android:id="@+id/top_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/top_back"
        android:textStyle="bold"
        android:onClick="onClickBack"/>

    <TextView
        android:id="@+id/top_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/top_home"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="onClickHome" />

    <TextView
        android:id="@+id/top_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:text="@string/top_menu"
        android:textStyle="bold"
        android:onClick="onClickMenu"/>

    <ImageView
        android:id="@+id/question_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/logo_top"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"/>


    <TextView
        android:id="@+id/tv_question_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_top"
        android:layout_marginLeft="20dp"/>


    <TextView
        android:id="@+id/tv_question_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_top"
        android:layout_toRightOf="@+id/question_picture"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:text="Language Text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_picture"
        android:layout_marginTop="10dp"
        android:text="@string/what_word"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/spacer"
        android:layout_below="@+id/tv_question"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_option_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/option_a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickOptionA"/>

        <TextView
            android:id="@+id/tv_option_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_below="@+id/tv_option_a"
            android:layout_marginTop="20dp"
            android:text="@string/option_c"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickOptionC"/>

    </RelativeLayout>


    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spacer"
        android:layout_below="@+id/tv_question"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_option_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/option_b"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickOptionB"/>


        <TextView
            android:id="@+id/tv_option_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_below="@+id/tv_option_b"
            android:layout_marginTop="20dp"
            android:text="@string/option_d"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickOptionD"/>

    </RelativeLayout>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/logo_bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit"
        android:enabled="false"
        android:onClick="onClickSubmit"/>


    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_uni" />

</RelativeLayout>