<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_screens.AddLanguage">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_lingo"/>

    <TextView
        android:id="@+id/top_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/top_back"
        android:textStyle="bold"
        android:onClick="onClickBack"/>

    <TextView
        android:id="@+id/top_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/top_home"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="onClickHome"/>

    <TextView
        android:id="@+id/top_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:text="@string/top_menu"
        android:textStyle="bold"
        android:onClick="onClickMenu"/>

    <TextView
        android:id="@+id/tv_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:text="@string/select_language"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_languages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bt_add_language"
        android:layout_below="@+id/tv_languages"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_borderbox"
        android:choiceMode="singleChoice"
        android:listSelector="@color/blue"
        android:padding="9dp" />

    <Button
        android:id="@+id/bt_add_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/logo_bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/bt_add_language"
        android:onClick="onClickAddLanguage"
        android:enabled="false"/>


    <ImageView
        android:id="@+id/logo_bottom"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_strath_uni" />

</RelativeLayout>